--- a/entries/application/wordpress/rewrite-template.twig
+++ b/entries/application/wordpress/rewrite-template.twig
@@ -36,16 +36,16 @@ function upcloo_user_template_callback($listOfModels)
    //init the content variable
    $content = '';
 
-   $content .= "<h2>A personal title for results:</h2>";
+   $content .= "&lt;h2&gt;A personal title for results:&lt;/h2&gt;";
 
-   $content .= "<ul>";
-   foreach ($listOfModels as $i => $element) {
-       if ($i > get_option(UPCLOO_MAX_SHOW_LINKS)) {
+   $content .= "&lt;ul&gt;";
+   foreach ($listOfModels as $i =&gt; $element) {
+       if ($i &gt; get_option(UPCLOO_MAX_SHOW_LINKS)) {
            break;
        }
-       $content .= "<li><a href='{$element["url"]}'>{$element["title"]}</a></li>";
+       $content .= "&lt;li&gt;&lt;a href='{$element["url"]}'&gt;{$element["title"]}&lt;/a&gt;&lt;/li&gt;";
    }
-   $content .= '</ul>';
+   $content .= '&lt;/ul&gt;';
 
    return $content;
 }</pre>
@@ -60,35 +60,35 @@ function upcloo_user_template_callback($listOfModels)
             </p>
             <pre class="prettyprint linenums">
 array(10) {
-  [0]=>
+  [0]=&gt;
   object(UpCloo_Model_Base)#4252 (1) {
-    ["_container:protected"]=>
+    ["_container:protected"]=&gt;
     array(5) {
-      ["title"]=>
+      ["title"]=&gt;
       string(36) "Nginx VS Apache2 on static resources"
-      ["url"]=>
+      ["url"]=&gt;
       string(69) "http://walterdalmut.com/2011/10/nginx-vs-apache2-on-static-resources/"
-      ["description"]=>
+      ["description"]=&gt;
       string(0) ""
-      ["type"]=>
+      ["type"]=&gt;
       string(4) "post"
-      ["image"]=>
+      ["image"]=&gt;
       string(0) ""
     }
   }
-  [1]=>
+  [1]=&gt;
   object(UpCloo_Model_Base)#4251 (1) {
-    ["_container:protected"]=>
+    ["_container:protected"]=&gt;
     array(5) {
-      ["title"]=>
+      ["title"]=&gt;
       string(36) "Nginx VS Apache2 on static resources"
-      ["url"]=>
+      ["url"]=&gt;
       string(72) "http://walterdalmut.com/2011/10/08/nginx-vs-apache2-on-static-resources/"
-      ["description"]=>
+      ["description"]=&gt;
       string(140) "First of all comparison between Apache and Nginx are useless because the first one is process based and the second one is async event based."
-      ["type"]=>
+      ["type"]=&gt;
       string(4) "post"
-      ["image"]=>
+      ["image"]=&gt;
       string(0) ""
     }
   }</pre>
