Fix title error

--- a/entries/application/wordpress/template-widget.twig
+++ b/entries/application/wordpress/template-widget.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="span12">
             <h1>
-                Template widget results by hand using UpCloo callbackNew Page Edit Page Page History
+                Template widget results by hand using UpCloo callback
             </h1>
             <p>
                 You can show widgets results completely by hand using the UpCloo callback during 
