--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -51,6 +51,7 @@
                 $('.dropdown-toggle').dropdown()
             });
         </script>
+        {% include 'analytics.twig' %}
     </body>
 </html>
 
