--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -20,9 +20,9 @@
                         <li><a href="/sdk/java.html">Java SE5</a></li>
                         <li><a href="#">.NET C#</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">JavaScript</a></li>
+                        <li><a href="/sdk/js.html">JavaScript</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">iOS 4.2+</a></li>
+                        <li><a href="/sdk/ios.html">iOS 4.2+</a></li>
                         <li><a href="#">Android 2.1+</a></li>
                     </ul>
                 </li>
