Added some docs

--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -25,6 +25,29 @@ permalink: documentation/
             </p>
         </div>
     </div>
+    <div class="row line-bottom">
+        <div class="span6">
+            <p>
+                <a href="/documentation/getting-started/correlation.html" class="big-text">Getting Started with Correlation</a>
+                The tipical flow that you have to follow for add the correlation
+                service to your business.
+            </p>
+        </div>
+        <div class="span6">
+            <p>
+                <a href="/documentation/getting-started/search.html" class="big-text">Getting Started with Search</a>
+                The tipical flow that you have to follow for add the search service
+                to your business.
+            </p>
+        </div>
+        <div class="span6">
+            <p>
+                <a href="#" class="big-text">Getting Started with Autocomplete</a>
+                The tipical flow that you have to follow for add the autocomplete
+                service to your business.
+            </p>
+        </div>
+    </div>
     <div class="row">
         <div class="span6">
             <h3>UpCloo Operations</h3>
