--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -34,12 +34,12 @@ providers:
             <div class="span12">
                 <h2>Getting Started</h2>
                 <p>
-                    First of all you have to get the library using the <a href="/sdk/php/structure">source tree</a>
+                    First of all you have to get the library using the <a href="/sdk/php/structure.html">source tree</a>
                     or using the <a href="/sdk/php/phar.html">PHAR archives</a>.
                 </p>
                 <p>
                     If you use ZF (Zend Framework) you have an already designed 
-                    <a href="/sdk/php/zf.html">resoure bootstrap</a>.
+                    <a href="/sdk/php/zf.html">resource bootstrap</a>.
                 </p>
             </div>
             <div class="span12">
