--- a/entries/documentation/performance.twig
+++ b/entries/documentation/performance.twig
@@ -15,7 +15,7 @@
                 using a real UpCloo implementation.
             </p>
             <p>
-                Consider that UpCloo uses a caching system based for reduce the
+                Consider that UpCloo uses a caching system for reduce the
                 amount of time needed to handle requests.
             </p>
         </div>
