--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -1,5 +1,3 @@
-permalink: documentation/
----
 <div class="content">
     <div class="row"><div class="span12"><h1>Documentation</h1></div></div>
     <div class="row">
@@ -7,7 +5,7 @@ permalink: documentation/
             <h3>UpCloo services</h3>
             <p>
                 All UpCloo parts that interacts with your business are
-                opensource. With this choice we want to demonstrate how
+                open-source. With this choice we want to demonstrate how
                 we work and our passion during code design.
             </p>
             <ul>
