--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -9,7 +9,7 @@
               <li><a href="/mit-license.html">License</a></li>
             </ul>
             <ul class="nav pull-right">
-                <li class=""><a href="/documentation">Documentation</a></li>
+                <li class=""><a href="/documentation.html">Documentation</a></li>
                 <li class="dropdown" id="menu2">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
                         SDKs
