--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -35,7 +35,7 @@ providers:
                 <h2>Getting Started</h2>
                 <p>
                     First of all you have to get the library using the <a href="/sdk/php/structure.html">source tree</a>
-                    or using the <a href="/sdk/php/phar.html">PHAR archives</a>.
+                    , using the <a href="/sdk/php/phar.html">PHAR archives</a> or using our <a target="_blank" href="http://pear.corley.it">PEAR channel</a>. 
                 </p>
                 <p>
                     If you use ZF (Zend Framework) you have an already designed 
