--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -18,12 +18,12 @@
                     <ul class="dropdown-menu">
                         <li><a href="/sdk/php.html">PHP 5.2+</a></li>
                         <li><a href="/sdk/java.html">Java SE5</a></li>
-                        <li><a href="#">.NET C#</a></li>
+                        <li><a href="/sdk/dot-net.html">.NET C#</a></li>
                         <li class="divider"></li>
                         <li><a href="/sdk/js.html">JavaScript</a></li>
                         <li class="divider"></li>
                         <li><a href="/sdk/ios.html">iOS 4.2+</a></li>
-                        <li><a href="#">Android 2.1+</a></li>
+                        <li><a href="/sdk/android.html">Android 2.1+</a></li>
                     </ul>
                 </li>
                 <li class="dropdown" id="menu3">
@@ -33,11 +33,11 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/application/wordpress.html">WordPress</a></li>
-                        <li><a href="#">Joomla!</a></li>
-                        <li><a href="#">Drupal</a></li>
-                        <li><a href="#">Typo3</a></li>
+                        <li><a href="/application/joomla.html">Joomla!</a></li>
+                        <li><a href="/application/drupal.html">Drupal</a></li>
+                        <li><a href="/application/typo3.html">Typo3</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Liferay</a></li>
+                        <li><a href="/application/liferay.html">Liferay</a></li>
                     </ul>
                 </li>
                 <li class="dropdown" id="tools">
