--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -40,7 +40,7 @@
         </div>
         <div class="span6">
             <p>
-                <a href="#" class="big-text">Getting Started with Autocomplete</a>
+                <a href="/documentation/getting-started/autocomplete.html" class="big-text">Getting Started with Autocomplete</a>
                 The tipical flow that you have to follow for add the autocomplete
                 service to your business.
             </p>
