--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -64,7 +64,7 @@ $autoloader = Zend_Loader_Autoloader::getInstance();
 $autoloader->registerNamespace("UpCloo_");</pre>
                 <p>
                     UpCloo SDK provides a section dedicated to 
-                    <a href="/documentation/sdk/php/zf.html">Zend Framework</a>
+                    <a href="/sdk/php/zf.html">Zend Framework</a>
                     for simplify the integration process.
                 </p>
                 <h3>Setting up your credentials</h3>
@@ -175,7 +175,7 @@ $response = $manager->index(
             </div>
             <div class="span12">
                 <p>For more information about UpCloo fields use the 
-                <a href="/documentation/#fields">base docs here</a></p>
+                <a href="/documentation.html#fields">base docs here</a></p>
             </div>
             <div class="span12">
                 <h3>Retrive indexed contents</h3>
