--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -26,6 +26,12 @@
     <div class="row line-bottom">
         <div class="span6">
             <p>
+                <a href="/documentation/getting-started/upcloo-concept.html" class="big-text">How does it work?</a>
+                This section explain basics around the UpCloo technology.
+            </p>
+        </div>
+        <div class="span6">
+            <p>
                 <a href="/documentation/getting-started/correlation.html" class="big-text">Getting Started with Correlation</a>
                 The tipical flow that you have to follow for add the correlation
                 service to your business.
