--- a/entries/documentation/getting-started/upcloo-concept.twig
+++ b/entries/documentation/getting-started/upcloo-concept.twig
@@ -32,9 +32,9 @@
             </p>
             <p>
                 A virtual sitekey tipically is used when UpCloo runs in network mode
-                an you have more than one website. In that scenario you have a sitekey
-                for every website and some virtual sitekey for show results about a 
-                content picked up from other websites of your network.
+                an you have more than one website. In this scenario you have a sitekey
+                for every website and virtual sitekeys for show results about a 
+                content picked up from websites of your network.
             </p>
             <p>
                 This feature is very useful, your interface for getting correlation is
@@ -45,7 +45,7 @@
 docs = manager->get("123"); //get correlation for content 123
 docs2 = manager-ger("123", "vsitekey"); //get correaltion for content 123 from a virtual sitekey named vsitekey</pre>
             <p>
-                Virtual Sitekey can be used also in single site creating new aspects
+                Virtual Sitekey can be used also in single site mode, it could be used for creating new aspects
                 using document fields. Suppose that you want to show results of a particular
                 author of your website, you can create a virtual sitekey for accomplish
                 this task.
