--- a/entries/documentation/getting-started/upcloo-concept.twig
+++ b/entries/documentation/getting-started/upcloo-concept.twig
@@ -42,8 +42,8 @@
                 Taka a lot with an example:
             </p>
             <pre class="prettyprint linenums">
-docs = manager->get("123"); //get correlation for content 123
-docs2 = manager-ger("123", "vsitekey"); //get correaltion for content 123 from a virtual sitekey named vsitekey</pre>
+docs = manager-&lt;get("123"); //get correlation for content 123
+docs2 = manager-&lt;get("123", "vsitekey"); //get correaltion for content 123 from a virtual sitekey named vsitekey</pre>
             <p>
                 Virtual Sitekey can be used also in single site mode, it could be used for creating new aspects
                 using document fields. Suppose that you want to show results of a particular
