Added deep update

--- a/entries/documentation/getting-started/upcloo-concept.twig
+++ b/entries/documentation/getting-started/upcloo-concept.twig
@@ -13,8 +13,13 @@
                 and one user has a valid credential access to a personal index.
             </p>
             <p>
-                Using SDKs or REST the index change during it life and the cache will
+                When you use SDKs or REST the index change and the cache will
                 be updated.
+            </p>
+            <p>
+            	When you add or update a content UpCloo change the index and update
+            	a big list of contents for generate a deep update and show this new content
+            	into your old contents. 
             </p>
             <blockquote>
                 <p>
