Added more fields

--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -110,8 +110,12 @@
                 <li><a href="/documentation/fields/publish-date.html">publish date</a></li>
                 <li><a href="/documentation/fields/summary.html">summary</a></li>
                 <li><a href="/documentation/fields/content.html">content</a></li>
-                <li>tag</li>
-                <li>category</li>
+                <li><a href="/documentation/fields/image.html">image</a></li>
+                <li><a href="/documentation/fields/url.html">url</a></li>
+                <li><a href="/documentation/fields/type.html">type</a></li>
+                <li>authors</li>
+                <li>tags</li>
+                <li>categories</li>
             </ul>
         </div>
         <div class="span6">
