Added url field

--- a/entries/documentation/rest/index.twig
+++ b/entries/documentation/rest/index.twig
@@ -40,6 +40,7 @@
             </p>
             <ul>
                 <li>title</li>
+                <li>url</li>
                 <li>summary</li>
                 <li>content</li>
             </ul>
@@ -57,6 +58,7 @@
     &lt;sitekey&gt;my-sitekey&lt;/sitekey&gt;
     &lt;password&gt;my-secret&lt;/password&gt;
     &lt;title&gt;my title&lt;/title&gt;
+    &lt;url&gt;http://my-domain.ltd/this-content.html&lt;/url&gt;
     &lt;summary&gt;this is my summary.&lt;/summary&gt;
     &lt;content&gt;A very long content&lt;/content&gt;
     &lt;tags&gt;
