--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -89,7 +89,8 @@ $manager->setCredential("username", "sitekey", "password");</pre>
 $response = $manager->index(
     array(
         'id' => '1234',
-        'title' => 'My content title'
+        'title' => 'My content title',
+        'url' => 'http://my-domain.ltd/news/article-1.html'
     )
 );</pre>
                 <p>
