--- a/entries/sdk/java.twig
+++ b/entries/sdk/java.twig
@@ -44,6 +44,7 @@ manager.setCredential("username", "sitekey", "password");
 Doc document = new Doc();
 document.setId("134");
 document.setTitle("This is the title");
+document.setUrl("http://www.my.domain.ltd/contents/one.html");
 
 //Request indexing
 if (manager.index(document)) {
@@ -70,6 +71,7 @@ manager.setCredential("username", "password", "sitekey");</pre>
 Doc document = new Doc();
 document.setId("35897");
 document.setTitle("This is the title");
+document.setUrl("http://www.my.domain.ltd/contents/one.html");
 
 manager.index(document);</pre>
                 <h3>Retriving contents</h3>
