Get the project section

--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -37,6 +37,11 @@ providers:
                     First of all you have to get the library using the <a href="/sdk/php/structure.html">source tree</a>
                     , using the <a href="/sdk/php/phar.html">PHAR archives</a> or using our <a target="_blank" href="http://pear.corley.it">PEAR channel</a>. 
                 </p>
+                <ul>
+                    <li><a href="/sdk/php/git-source.html">How to load UpCloo PHP SDK using the source tree (GIT or copy-paste)</a></li>
+                    <li><a href="/sdk/php/phar.html">How to load UpCloo PHP SDK using the PHAR archive</a></li>
+                    <li><a href="/sdk/php/pear.html">How to load UpCloo PHP SDK using PEAR or Pyrus package manager</a></li> 
+                </ul>
                 <p>
                     If you use ZF (Zend Framework) you have an already designed 
                     <a href="/sdk/php/zf.html">resource bootstrap</a>.
