--- a/entries/index.twig
+++ b/entries/index.twig
@@ -29,7 +29,7 @@ providers:
                 <h3>Open-source</h3>
                 <p>
                     All UpCloo plugins and tools for
-                    your business is released as Open-source projects for
+                    your business are released as Open-source projects for
                     give to you the ability to evaluate us. See all projects
                     on <a href="https://github.com/corley">Github</a>.
                 </p>
