Added info for pyrus

--- a/entries/application/zf.twig
+++ b/entries/application/zf.twig
@@ -18,6 +18,13 @@ pear channel-discover pear.corley.it
 pear install UpCloo_Manager-beta
 </pre>
             <p>
+                If you prefer Pyrus (PEAR2) use as the same:
+            </p>
+            <pre class="prettyprint">
+php pyrus.phar channel-discover pear.corley.it
+php pyrus.phar install UpCloo_Manager-beta
+</pre>
+            <p>
                 Now bootstrap the UpCloo library into your <code>application.ini</code>
             </p>
             <pre class="prettyprint linenums">
