--- a/entries/application/zf.twig
+++ b/entries/application/zf.twig
@@ -11,7 +11,7 @@
 			<h2>Getting Started</h2>
 			<p>
 			    First of all get UpCloo using one method, using PEAR packages is 
-			    highly recommanded. 
+			    highly recommended. 
 			</p>
 			<pre class="prettyprint">
 pear channel-discover pear.corley.it
