--- a/entries/index.twig
+++ b/entries/index.twig
@@ -42,7 +42,7 @@ providers:
                     for get all the latest news on UpCloo.
                 </p>
                 <p>
-                    Share this to your friend.
+                    Share this with your friends.
                 </p>
                 <p>
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://developer.upcloo.com" data-via="CorleyCloud" data-related="CorleyCloud" data-count="none" data-hashtags="UpClooDevelopers">Tweet</a>
