--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -27,27 +27,27 @@
         <div class="span6">
             <p>
                 <a href="/documentation/getting-started/upcloo-concept.html" class="big-text">How does it work?</a>
-                This section explain basics around the UpCloo technology.
+                This section explain basics about the UpCloo technology.
             </p>
         </div>
         <div class="span6">
             <p>
                 <a href="/documentation/getting-started/correlation.html" class="big-text">Getting Started with Correlation</a>
-                The tipical flow that you have to follow for add the correlation
+                The tipical flow that you have to follow to add the correlation
                 service to your business.
             </p>
         </div>
         <div class="span6">
             <p>
                 <a href="/documentation/getting-started/search.html" class="big-text">Getting Started with Search</a>
-                The tipical flow that you have to follow for add the search service
+                The tipical flow that you have to follow to add the search service
                 to your business.
             </p>
         </div>
         <div class="span6">
             <p>
                 <a href="/documentation/getting-started/autocomplete.html" class="big-text">Getting Started with Autocomplete</a>
-                The tipical flow that you have to follow for add the autocomplete
+                The tipical flow that you have to follow to add the autocomplete
                 service to your business.
             </p>
         </div>
@@ -62,7 +62,7 @@
         <div class="span6">
             <p>
                 UpCloo is designed around an index. You can
-                interact with this index using dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
+                interact with this index using the dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
             </p>
             <ul>
                 <li><a href="/documentation/rest/get.html">Retrive (GET)</a></li>
@@ -72,13 +72,13 @@
             </li>
             </ul>
             <p>
-                For simplify your work, you can choose an already available SDK. An SDK wrap the XML REST
+                To simplify your work, you can choose an already available SDK. An SDK wraps the XML REST
                 service for integrating UpCloo quickly into an existing application.
             </p>
         </div>
         <div class="span6">
             <p>
-                UpCloo use a NOSQL database. Our database is strongly-typed and you 
+                UpCloo uses a NOSQL database. Our database is strongly-typed and you 
                 have to use a correct field type for all your injections. 
             </p>
             <ul>
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="span6">
-            <p>UpCloo dynamic fields for get more power</p>
+            <p>UpCloo dynamic fields to get more power</p>
             <ul>
                 <li>tag</li>
                 <li>text</li>
