added composer docs

--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -38,6 +38,7 @@ providers:
                     , using the <a href="/sdk/php/phar.html">PHAR archives</a> or using our <a target="_blank" href="http://pear.corley.it">PEAR channel</a>. 
                 </p>
                 <ul>
+                    <li><a href="/sdk/php/composer.html">How to load UpCloo PHP SDK using Composer</a></li>
                     <li><a href="/sdk/php/git-source.html">How to load UpCloo PHP SDK using the source tree (GIT or copy-paste)</a></li>
                     <li><a href="/sdk/php/phar.html">How to load UpCloo PHP SDK using the PHAR archive</a></li>
                     <li><a href="/sdk/php/pear.html">How to load UpCloo PHP SDK using PEAR or Pyrus package manager</a></li> 
