--- a/entries/sdk/php/composer.twig
+++ b/entries/sdk/php/composer.twig
@@ -1,4 +1,4 @@
-v class="content">
+<div class="content">
     <div class="row">
         <div class="span12">
             <h1>Load UpCloo PHP SDK using Composer</h1>
@@ -31,7 +31,7 @@ php composer.phar install</pre>
                 You can use the composer autoloader.
             </p>
             <pre class="prettyprint linenums">
-<?php
+&lt;?php
 require_once dirname(__FILE__) . '/../vendor/autoload.php';</pre>
         </div>
     </div>
