fix error on PHP sections

--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -34,8 +34,8 @@ providers:
             <div class="span12">
                 <h2>Getting Started</h2>
                 <p>
-                    First of all you have to get the library using the <a href="/sdk/php/structure.html">source tree</a>
-                    , using the <a href="/sdk/php/phar.html">PHAR archives</a> or using our <a target="_blank" href="http://pear.corley.it">PEAR channel</a>. 
+                    First of all you have to get the library using the <a href="/sdk/php/git-source.html">source tree</a>
+                    , using the <a href="/sdk/php/phar.html">PHAR archives</a> or using our <a target="_blank" href="http://pear.corley.it">PEAR channel</a> or using <a href="/sdk/php/composer.html">Composer</a>. 
                 </p>
                 <ul>
                     <li><a href="/sdk/php/composer.html">How to load UpCloo PHP SDK using Composer</a></li>
