--- a/entries/index.twig
+++ b/entries/index.twig
@@ -62,7 +62,7 @@ providers:
                 </div>
             {% endfor %}
                 <div class="span6" style="margin-top: 36px">
-                    <p><a target="_blank" href="http://www.corley.it/blog">See all posts on Corley Blog...</a></p>
+                    <p><a target="_blank" href="http://www.corley.it/">See all posts on Corley Blog...</a></p>
                 </div>
             </div>
             <div class="span6">
