--- a/entries/sdk/php/composer.twig
+++ b/entries/sdk/php/composer.twig
@@ -12,7 +12,7 @@
             <pre class="prettyprint linenums">
 {
     "require": {
-        "corley/upcloo-php-sdk": "0.12.*"
+        "corley/upcloo-php-sdk": "0.13.1"
     },
     "repositories": [
         {
