--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -4,7 +4,7 @@
             <a style="margin:0;padding:0" class="brand" href="/">
                 <img src="/media/img/upcloo-small.png" alt="upcloo"/>
             </a>
-            <a class="brand" style="color:white" href="/"> developers</a>
+            <a class="brand" href="/"> developers</a>
             <ul class="nav">
               <li><a href="/mit-license.html">License</a></li>
             </ul>
