--- a/entries/index.twig
+++ b/entries/index.twig
@@ -18,7 +18,7 @@ providers:
     <section class="start">
         <div class="row">
             <div class="span12">
-                <h3 class="">Discover how it's simple to integrate UpCloo 
+                <h3 class="">Discover how it's simple to integrate UpCloo
                 services into your existing applications</h3>
                 <p>UpCloo is provided with a large set of SDKs and Plugins</p>
             </div>
@@ -31,21 +31,22 @@ providers:
                     All UpCloo plugins and tools for
                     your business are released as Open-source projects for
                     give to you the ability to evaluate us. See all projects
-                    on <a href="https://github.com/corley">Github</a>.
+                    on <a href="https://github.com/upcloo">Github</a>.
                 </p>
             </div>
             <div class="span6">
                 <img src="/media/img/icon-twitter.png" alt="twitter" class="icon-left"/>
                 <h3>Twitter for Updates</h3>
                 <p>
-                    Follow us on <a href="https://www.twitter.com/CorleyCloud">Twitter</a>
+                    Follow us on <a href="https://www.twitter.com/upcloo">Twitter</a>
                     for get all the latest news on UpCloo.
                 </p>
                 <p>
                     Share this with your friends.
                 </p>
                 <p>
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://developer.upcloo.com" data-via="CorleyCloud" data-related="CorleyCloud" data-count="none" data-hashtags="UpClooDevelopers">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button"
+                        data-url="http://developer.upcloo.com" data-via="UpClooDevelopers" data-related="upcloo" data-count="none" data-hashtags="UpClooDevelopers">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                 </p>
             </div>
@@ -62,7 +63,7 @@ providers:
                 </div>
             {% endfor %}
                 <div class="span6" style="margin-top: 36px">
-                    <p><a target="_blank" href="http://www.corley.it/">See all posts on Corley Blog...</a></p>
+                    <p><a target="_blank" href="http://www.upcloo.com/">See all posts on UpCloo Blog...</a></p>
                 </div>
             </div>
             <div class="span6">
@@ -92,7 +93,7 @@ new TWTR.Widget({
     live: false,
     behavior: 'all'
   }
-}).render().setUser('CorleyCloud').start();
+}).render().setUser('upcloo').start();
 </script>
             </div>
         </div>
