--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
             <a style="margin:0;padding:0" class="brand" href="/">
@@ -10,8 +10,8 @@
             </ul>
             <ul class="nav pull-right">
                 <li class=""><a href="/documentation.html">Documentation</a></li>
-                <li class="dropdown" id="menu2">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdownis" href="#">
                         SDKs
                         <b class="caret"></b>
                     </a>
@@ -26,8 +26,8 @@
                         <li><a href="/sdk/android.html">Android 2.1+</a></li>
                     </ul>
                 </li>
-                <li class="dropdown" id="menu3">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu3">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         Applications
                         <b class="caret"></b>
                     </a>
@@ -41,8 +41,8 @@
                         <li><a href="/application/liferay.html">Liferay</a></li>
                     </ul>
                 </li>
-                <li class="dropdown" id="tools">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#tools">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         Tools
                         <b class="caret"></b>
                     </a>
