--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -7,14 +7,14 @@
         <meta name="author" content="Corley S.r.l.">
 
         <!-- styles -->
-        <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"">
+        <link rel="stylesheet" href="/styles/bootstrap.min.css"">
         <style type="text/css">
           body {
             padding-top: 60px;
             padding-bottom: 40px;
           }
         </style>
-        <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="/styles/bootstrap-responsive.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/styles/default.css">
         <link rel="stylesheet" type="text/css" href="/styles/prettify.css">
 
@@ -29,25 +29,14 @@
         <!-- Le javascript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="http://twitter.github.com/bootstrap/assets/js/jquery.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
-        <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
+        <script src="/scripts/jquery-1.8.2.min.js"></script>
+        <script src="/scripts/bootstrap.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="/scripts/default.js"></script>
         <script type="text/javascript" src="/scripts/prettify.js"></script>
         <script>
             $(document).ready(function () {
                 prettyPrint();
-            
+
                 $('.dropdown-toggle').dropdown()
             });
         </script>
