UpCloo Ltd info on footer

--- a/layouts/footer.twig
+++ b/layouts/footer.twig
@@ -1,3 +1,4 @@
 <footer class="footer">
-    <p>&copy; UpCloo 2012 - - , - - - - - - -</p>
+<p>&copy; UpCloo Ltd. &copy; {{ "now"|date('Y') }} - Faraday Wharf, Holt Street - B7 4BB, Birmingham Science Park Aston- Birmingham -
+    UK</p>
 </footer>
