--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -14,7 +14,7 @@
             padding-bottom: 40px;
           }
         </style>
-        <link href="/styles/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="/styles/bootstrap-responsive.mincss" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/styles/default.css">
         <link rel="stylesheet" type="text/css" href="/styles/prettify.css">
 
