--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -11,7 +11,7 @@
             <ul class="nav pull-right">
                 <li class=""><a href="/documentation.html">Documentation</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdownis" href="#">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#docs">
                         SDKs
                         <b class="caret"></b>
                     </a>
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#sdks">
                         Applications
                         <b class="caret"></b>
                     </a>
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#imports">
                         Tools
                         <b class="caret"></b>
                     </a>
